# agentdeck

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/scripts/: init_remote_env.sh
.claude/skills/release/: SKILL.md
docs/: architecture.md  mvp3-plan.md  screen-dup.md  soft-keyboard.md
scripts/: build-css.sh  capture_pane.py  capture_spinners.py  data_cleanup.sh  release.sh  start_agent.sh  tunnel
src/agentdeck/: config.py  main.py
src/agentdeck/agents/: __init__.py  base.py  claude_code.py  codex.py
src/agentdeck/api/: notifications.py  router.py  sessions.py
src/agentdeck/notifications/: push.py  store.py  vapid.py
src/agentdeck/sessions/: agent_output_log.py  clipboard.py  manager.py  models.py  tmux_backend.py  ui_state_detector.py
src/agentdeck/static/: manifest.json  sw.js
src/agentdeck/static/css/: app.css  input.css  tailwind.css
src/agentdeck/static/js/: app.js
src/agentdeck/templates/: base.html  index.html
src/agentdeck/templates/partials/: message.html  terminal.html
tests/: conftest.py  test_agent_output_log.py  test_agents.py  test_agents_integration.py  test_claude_integration.py  test_clipboard.py  test_config.py  test_main.py  test_notification_push.py  test_notification_store.py  test_notifications_api.py  test_session_manager.py  test_sessions_api.py  test_terminal_to_html.py  test_tmux_backend.py  test_ui_state_detector.py
